Added profile swapping at runtime through serial port communication

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@ allScreenKeyboardDesktop/node_modules
 allScreenKeyboardDesktop/exports
 allScreenKeyboardDesktop/profiles
 allScreenKeyboardDesktop/templateImages
+keyboard/profiles
+keyboard/videos
+keyboard/profiles.zip
 glyphs
 node_modules
 out
