--- a/keyboard/Makefile
+++ b/keyboard/Makefile
@@ -1,7 +1,7 @@
 programName = keyboard
 
 build:
-	g++ src/main.cpp src/keyboard.cpp src/readHallEffect.cpp src/graphics.cpp src/text.cpp src/shader.cpp src/texture.cpp src/bluetooth.cpp src/physicalLayout.cpp -o ${programName} -lwiringPi -lSDL2 -lSDL2_image -lSDL2_ttf -lGLESv2 -lzmq -lavutil -lavformat -lavcodec -lswscale -lswresample
+	g++ src/main.cpp src/keyboard.cpp src/readHallEffect.cpp src/graphics.cpp src/text.cpp src/shader.cpp src/texture.cpp src/bluetooth.cpp src/physicalLayout.cpp -o ${programName} -lSDL2 -lSDL2_image -lSDL2_ttf -lGLESv2 -lzmq -lavutil -lavformat -lavcodec -lswscale -lswresample
 	@echo "Build Finished"
 
 run:
@@ -14,7 +14,7 @@ clean:
 	@echo "Clean Finished"
 
 keyTest:
-	g++ src/keyTest.cpp src/readHallEffect.cpp -o keyTest -lwiringPi -lSDL2
+	g++ src/keyTest.cpp src/readHallEffect.cpp -o keyTest -lSDL2
 	./keyTest
 	-rm keyTest
 
